# catchy

./: .dockerignore  README.md  pyproject.toml
.github/workflows/: build-and-publish-codex-image.yml
configurations/: codex.yaml
containers/codex/: Dockerfile
containers/web/: Dockerfile  docker-entrypoint.sh
scripts/: app.py  run.py
tests/: conftest.py  test_challenge_models.py  test_codex_agent.py  test_codex_usage.py  test_pytest_recording_config.py  test_webhook_models.py
tests/cassettes/test_codex_agent/: lets_change_docker_container.yaml
tests/fixtures/challenges/lets-change/: challenge.yaml
tests/fixtures/challenges/lets-change/source/: challenge.c
tests/fixtures/stream_outputs/: lets_change_stream.json
